# PIDENet

./: README.md
LINEMOD/data/05/: info.yml  test.txt  train.txt
pidenet_anno/: README.md  generate_camera_labels.py  requirements.txt  run_object01_demo.py  test_collision_pruning.py  test_geometry_utils.py  visualize_3d.py
pidenet_anno/annotation/: approach_vector.py  collision_pruning.py  efd_contour.py  grasp_scoring.py  pipeline.py  projection.py  stable_pose.py
pidenet_anno/configs/: config.yaml
pidenet_anno/examples/: generate_fake_linemod_for_testing.py
pidenet_anno/utils/: geometry_utils.py  io_utils.py  transform.py
pidenet_annotator/: README.md  hyperparams.yml  make_debug_figure.py  pyproject.toml  requirements.txt  run_phase1.py  run_phase2.py  run_ubuntu.sh  run_windows.bat
pidenet_annotator/outputs/: phase1_candidates_ape.yml  phase1_candidates_kettle.yml
pidenet_annotator/pidenet_annotator/: README.md  __init__.py  approach_vector.py  pipeline.py  projection.py  run_phase1.py  run_windows.bat  stable_pose.py
pidenet_annotator/pidenet_annotator/outputs/: phase1_candidates_ape.yml  phase1_candidates_kettle.yml
pidenet_annotator/pidenet_annotator/phase2/: __init__.py  dataset_io.py  frame_labeling.py  visualize.py
pidenet_annotator/pidenet_annotator/pidenet_annotator/: grasp2d.py  scoring.py  viz3d.py
